# Distributed_Job_Scheduler

./: .gitconfig  .gitignore  README.md  design_guidelines.json  test_result.md
backend/: login-test.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: dev.db  dev.db-journal  schema.prisma
backend/src/: index.ts  seed.ts
backend/src/lib/: auth.ts  logger.ts  prisma.ts  redis.ts  swagger.ts
backend/src/middleware/: auth.ts  error.ts
backend/src/realtime/: io.ts
backend/src/routes/: analytics.ts  auth.ts  dlq.ts  health.ts  jobs.ts  projects.ts  queues.ts  workers.ts
backend/src/worker/: index.ts
backend_py/: README.md  _debug_login.py  _inspect_imports.py  main.py  pyproject.toml  requirements.txt
backend_py/lib/: auth.py  db.py  deps.py  password.py  schemas.py  utils.py
backend_py/routes/: __init__.py  analytics.py  auth.py  dlq.py  health.py  jobs.py  projects.py  queues.py  workers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnimatedNumber.tsx  AppLayout.tsx  CommandPalette.tsx  MagneticCard.tsx  ParticleField.tsx  QueueTopology.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Dlq.tsx  Home.tsx  JobDetail.tsx  Jobs.tsx  Login.tsx  Logs.tsx  Projects.tsx  Queues.tsx  Register.tsx  Settings.tsx  Workers.tsx
memory/: PRD.md
test_reports/pytest/: README.md
(+10 files in other folders)
